Overview of changes in xtickertape-2.0a8

* It is now possible to reply to a message in a different group by
  first selecting the message to which you are replying and then
  selecting the group to send it to.  To clear the current selection,
  click on it in the history.

* The show-url command has been completely rewritten to use the
  BROWSER environment variable as defined by ESR.

Overview of changes in xtickertape-2.0a7

* The path to metamail is now an X resource.

* The application now refuses to run if the app-defaults isn't found
  or has a different version number than the executable, and prints an
  error message which should hopefully help the user to address the
  problem.  [Thanks Mark White]

* Added a way to set the idle-period to test the connection after some
  period of inactivity.

Overview of changes in xtickertape-2.0a6

* The Send button is now disabled until there is at least one
  character in the `Text' field.

* Group notifications now conform to both the old message format and
  the v3.0 draft specification.

* Created a new widget (class History) to display the last few
  messages.  The length of the history can be specified by setting
  the XTickertape.history.messageCapacity X resource.  See the man
  page for additional History widget resources.

* Replaced tool-tips with a status bar.

* Changed the application class from `Tickertape' to `XTickertape'.

* No longer redirecting the output of `metamail' to /dev/null, and
  using the `-x' option so that it doesn't try to talk to the tty.
  [Thanks David Leonard]

* Also passing the mime args to metamail through a pipe instead of a
  temporary file.  [Thanks David Leonard]

* Fixed a bug in the way the icon was created.  Now the big `e' will
  be red even on 8-bit displays.

* The scroller can now operate without an offscreen pixmap.  This
  enables hardware optimizations with some graphics cards, but results 
  in more traffic between the client and server.  The offscreen pixmap 